--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,8 @@
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#00a300">
     <meta name="theme-color" content="#aaaaaa">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
