--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,7 @@
     <meta name="msapplication-TileColor" content="#00a300">
     <meta name="theme-color" content="#aaaaaa">
     <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 
 
     <!--
