Update UI, open monit if click on instance

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#aaaaaa">
     <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
